--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "webpack-cli": "^3.2.3"
   },
   "devDependencies": {
+    "html-webpack-plugin": "^3.2.0",
     "typescript": "^4.3.5",
     "webpack-dev-server": "^3.11.2"
   }
