--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/react": "^17.0.16",
     "@types/react-dom": "^17.0.9",
     "html-webpack-plugin": "^3.2.0",
+    "tslint": "^6.1.3",
     "typescript": "^4.3.5",
     "webpack-dev-server": "^3.11.2"
   }
