--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,30 +1,43 @@
 {
   "compilerOptions": {
-    "outDir": "build/dist",
-    "module": "commonjs",
+    "outDir": "dist",
+    "declaration": true,
+    "baseUrl": ".",
+    "module": "esnext",
     "target": "es5",
     "lib": ["es6", "dom"],
     "sourceMap": true,
-    "allowJs": true,
     "jsx": "react",
     "moduleResolution": "node",
-    // "rootDir": "lib",
+    "rootDir": ".",
+    "forceConsistentCasingInFileNames": true,
     "noImplicitReturns": true,
     "noImplicitThis": true,
     "noImplicitAny": true,
+    "importHelpers": true,
     "strictNullChecks": true,
-    "allowSyntheticDefaultImports": true,
+    // "suppressImplicitAnyIndexErrors": true,
+    // https://github.com/Microsoft/TypeScript/issues/28762#issuecomment-443406607
+    // "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
+    "noUnusedLocals": true
   },
+  "include": [
+    "lib/**/*",
+    "example/**/*"
+  ],
   "exclude": [
     "node_modules",
     "build",
-    "scripts",
-    "acceptance-tests",
+    "dist",
+    "public",
     "webpack",
     "jest",
+    "*.js",
+    "**/*.test.ts",
+    "**/*.test.tsx",
+    "scripts",
+    "acceptance-tests",
     "src/setupTests.ts"
-  ],
-  "types": [
-    "typePatches"
   ]
 }
