--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "another react ui library",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server",
-    "build": "webpack"
+    "start": "cross-env NODE_ENV=development webpack-dev-server --config webpack.config.dev.js",
+    "build": "cross-env NODE_ENV=production webpack --config webpack.config.prod.js"
   },
   "repository": {
     "type": "git",
@@ -26,14 +26,15 @@
     "react-dom": "^16.8.2"
   },
   "devDependencies": {
-    "webpack": "^4.29.6",
-    "webpack-cli": "^3.2.3",
     "@types/react": "^16.8.7",
     "@types/react-dom": "^16.8.2",
     "awesome-typescript-loader": "^5.2.1",
-    "typescript": "^4.3.5",
-    "tslint": "^6.1.3",
+    "cross-env": "^7.0.3",
     "html-webpack-plugin": "^3.2.0",
+    "tslint": "^6.1.3",
+    "typescript": "^4.3.5",
+    "webpack": "^4.29.6",
+    "webpack-cli": "^3.2.3",
     "webpack-dev-server": "^3.11.2"
   }
 }
