--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "hit-ui",
   "version": "1.0.0",
   "description": "another react ui library",
-  "main": "index.js",
+  "main": "dist/lib/index.js",
+  "types": "dist/lib/index",
   "scripts": {
     "start": "cross-env NODE_ENV=development webpack-dev-server --config webpack.config.dev.js",
     "build": "cross-env NODE_ENV=production webpack --config webpack.config.prod.js"
