--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "dist/lib/index.js",
   "types": "dist/lib/index",
   "scripts": {
+    "test": "cross-env NODE_ENV=test jest --config=jest.config.js --runInBand",
     "start": "cross-env NODE_ENV=development webpack-dev-server --config webpack.config.dev.js",
     "build": "cross-env NODE_ENV=production webpack --config webpack.config.prod.js"
   },
@@ -23,19 +24,40 @@
   },
   "homepage": "https://github.com/Llane00/hit-ui#readme",
   "dependencies": {
-    "react": "^16.8.7",
-    "react-dom": "^16.8.2"
+    "react": "^16.8.4",
+    "react-dom": "^16.8.4",
+    "react-router-dom": "^5.0.0"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.3.4",
+    "@babel/preset-react": "^7.0.0",
+    "@types/jest": "^24.0.9",
     "@types/react": "^16.8.7",
     "@types/react-dom": "^16.8.2",
+    "@types/react-router-dom": "^4.3.1",
+    "@types/react-test-renderer": "^16.8.1",
     "awesome-typescript-loader": "^5.2.1",
-    "cross-env": "^7.0.3",
+    "babel-jest": "^24.3.1",
+    "babel-preset-react-app": "^7.0.2",
+    "cross-env": "^5.2.0",
+    "css-loader": "^2.1.1",
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.11.2",
+    "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
-    "tslint": "^6.1.3",
-    "typescript": "^4.3.5",
+    "jest": "^24.3.1",
+    "jest-junit": "^6.3.0",
+    "node-sass": "^4.11.0",
+    "prism-react-renderer": "^0.1.6",
+    "raw-loader": "^2.0.0",
+    "react-test-renderer": "^16.8.4",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
+    "svg-sprite-loader": "^4.1.3",
+    "ts-jest": "^24.0.0",
+    "typescript": "^3.3.3333",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.2.3",
-    "webpack-dev-server": "^3.11.2"
+    "webpack-dev-server": "^3.2.1"
   }
 }
