feat: 配置webpack和ts可以加载svg

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,8 @@
     "skipLibCheck": true,
   },
   "include": [
-    "lib/**/*"
+    "lib/**/*",
+    "types/**/*"
   ],
   "exclude": [
     "node_modules",
