--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@babel/core": "^7.0.0",
     "@babel/preset-env": "^7.3.4",
     "@babel/preset-react": "^7.0.0",
+    "@types/enzyme": "^3.10.9",
     "@types/jest": "^24.0.9",
     "@types/react": "^16.8.4",
     "@types/react-dom": "^16.8.4",
