--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,10 @@ language: node_js
 node_js:
   - "stable"
 cache:
+  yarn: true
   directories:
   - node_modules
+install:
+- yarn
 script:
-  - npm run ci
+  - yarn ci
