--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "hit-ui",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "another react ui library",
   "main": "dist/lib/index.js",
   "types": "dist/lib/index",
+  "files": ["/dist"],
   "scripts": {
     "start": "cross-env NODE_ENV=development webpack-dev-server --config webpack.config.dev.js",
     "build": "cross-env NODE_ENV=production webpack --config webpack.config.prod.js",
