--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "another react ui library",
   "main": "dist/lib/index.js",
   "types": "dist/lib/index",
-  "files": ["/dist"],
+  "files": ["/dist/**/*"],
   "scripts": {
     "start": "cross-env NODE_ENV=development webpack-dev-server --config webpack.config.dev.js",
     "build": "cross-env NODE_ENV=production webpack --config webpack.config.prod.js",
