--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "another react ui library",
   "main": "dist/lib/index.js",
   "types": "dist/lib/index",
-  "files": ["/dist/**/*"],
+  "files": [
+    "/dist/**/*"
+  ],
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --config webpack.config.dev.js",
     "build": "cross-env NODE_ENV=production webpack --config webpack.config.prod.js",
@@ -26,9 +28,10 @@
   },
   "homepage": "https://github.com/Llane00/hit-ui#readme",
   "dependencies": {
-    "react": "^16.8.4",
-    "react-dom": "^16.8.4",
-    "react-router-dom": "^5.0.0"
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
+    "react-router": "^5.0.1",
+    "react-router-dom": "^5.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
@@ -36,10 +39,10 @@
     "@babel/preset-react": "^7.0.0",
     "@types/enzyme": "^3.10.9",
     "@types/jest": "^24.0.9",
-    "@types/react": "^16.8.4",
-    "@types/react-dom": "^16.8.4",
-    "@types/react-router-dom": "^4.3.1",
-    "@types/react-test-renderer": "^16.8.4",
+    "@types/react": "^16.9.2",
+    "@types/react-dom": "^16.9.0",
+    "@types/react-router-dom": "^4.3.5",
+    "@types/react-test-renderer": "^16.9.0",
     "awesome-typescript-loader": "^5.2.1",
     "babel-jest": "^24.3.1",
     "babel-preset-react-app": "^7.0.2",
@@ -47,13 +50,14 @@
     "css-loader": "^2.1.1",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.11.2",
-    "file-loader": "^3.0.1",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.3.1",
     "jest-junit": "^6.3.0",
     "node-sass": "^4.11.0",
-    "prism-react-renderer": "^0.1.6",
-    "raw-loader": "^2.0.0",
+    "prism-react-renderer": "^1.2.1",
+    "raw-loader": "^4.0.2",
+    "react-router": "^6.0.2",
     "react-test-renderer": "^16.8.4",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
