--- a/package.json
+++ b/package.json
@@ -38,14 +38,15 @@
     "@babel/core": "^7.0.0",
     "@babel/preset-env": "^7.3.4",
     "@babel/preset-react": "^7.0.0",
+    "@babel/preset-typescript": "^7.16.0",
     "@types/enzyme": "^3.10.9",
     "@types/jest": "^24.0.9",
     "@types/react": "^16.9.2",
     "@types/react-dom": "^16.9.0",
     "@types/react-router-dom": "^4.3.5",
     "@types/react-test-renderer": "^16.9.0",
-    "awesome-typescript-loader": "^5.2.1",
     "babel-jest": "^24.3.1",
+    "babel-loader": "^8.2.3",
     "babel-preset-react-app": "^7.0.2",
     "cross-env": "^5.2.0",
     "css-loader": "^2.1.1",
